fix: address review-pass findings on RingCentral fax provider
Bundle of 17 fixes from a multi-agent PR review (3 must, 7 should, 7 could).

Must-fix:
- FaxImporter.poll: on markFaxAsRead failure, delete the quarantined PDF and
  persist FaxJob ERROR; abort Phase 3 entirely. Prevents silent duplicate EDoc
  on next poll, since the still-unread message gets a fresh unique filename
  on re-download.
- RingCentralFaxService.parseCreationTime: throw on DateTimeParseException
  instead of fabricating new Date(); listInboundFaxes skips the offending
  record so no fabricated clinical timestamp lands in EDocs.
- FaxConfig class JavaDoc: list all four encrypted credential fields
  (passwd, faxPasswd, ringCentralClientSecret, ringCentralJwtToken).

Should-fix:
- ConfigureFax2Action: register fax slice in MutatorActionGetRejectionContract
  IN_SCOPE_PACKAGE_PREFIXES + CONDITIONAL_MUTATORS; add POST guard before
  configure() and restartFaxScheduler() mutator branches.
- resolveProviderType: distinguish legacy-JSP (whole array null -> MIDDLEWARE)
  from form omission (some rows missing -> IllegalArgumentException);
  eliminates silent credential-wipe path.
- RingCentralResponse.Message and MessageList: convert to records with
  defensive copy in canonical constructor; legacy getXxx accessors retained
  for source compatibility.
- sendFax: throw when provider returns non-numeric job id, instead of storing
  null jobId that would later break status checks forever.
- New FaxImporterPollTest case pins the markFaxAsRead-failure dedup contract
  with a real @TempDir + minimal PDF fixture.
- resolveFromProperties: pin host-per-property so prod property only accepts
  prod host and sandbox property only accepts sandbox host. Doc updated.
- New HTTP test asserts JWT bearer grant_type and assertion form-body params.

Could-fix:
- 8-char correlation IDs added to ConfigureFax2Action error/auto-start catch
  branches; logged server-side and surfaced in JSON message.
- fetchFaxStatus: distin